--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  im_stepper: ^1.0.1+1
+  progress_timeline: ^0.0.5
+  dropdown_textfield: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +68,7 @@ flutter:
     - assets/images/sales.png
     - assets/images/Chat support.png
     - assets/images/arrow.png
+    - assets/images/google_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
