--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
   flutter_spinkit: ^5.1.0
+  google_sign_in: ^6.0.1
 
 dev_dependencies:
   flutter_test:
